# dxl_bu

./: .gitignore  README.md  pyproject.toml
codes/: .download.py.swp  .swp  ACE_sw_flux.pro  Nicks_cusp_finder.pro  data_comparison.py  data_save_omnl_v01.py  download_bw.py  dscovr_30days_all.py  dxl_dwld_upld_ace.py  dxl_dwld_upld_ace_1day.py  dxl_dwld_upld_ace_7days.py  dxl_dwld_upld_ace_ftp.py  dxl_dwld_upld_ace_ftp_v2.py  dxl_dwld_upld_dscovr.py  dxl_dwld_upld_dscovr_1day.py  dxl_dwld_upld_dscovr_30days_automated.py  dxl_dwld_upld_dscovr_54days.py  dxl_dwld_upld_dscovr_54days_atomated.py  dxl_dwld_upld_dscovr_7days.py  dxl_gif_dscovr.py  dxl_gif_dscovr_v2.py  dxl_mp4_dscovr.py  dxl_vid_dscovr.py  exec_all_files.py  field_line_trace.py  janus_mfi_arcv_hres.py  mfi_access_data.py  parameter_test.py  plot_DSCOVR_dxliii.pro  post_file_bw.py  robots.txt.tmp  solar_activity_summary.py  test.py  upload.sh
data/: AC_H0_SWE_21105.csv  AC_OR_DEF_20210101_20210630.csv  AC_OR_SSC_120581.csv  DSCOVR_H1_FC_25808.csv  DSCOVR_ORBIT_PRE_121439.csv  OMNI_HRO_1MIN_134825.csv  mag-2-hour.json  plasma-2-hour.json  rtsw_dscovr_2017_2022.txt  rtsw_plot_data_2021-01-31T10_00_00.txt
data/ace_ftp_data/: 20211205_ace_mag_1m.txt  20211205_ace_swepam_1m.txt  20211206_ace_mag_1m.txt  20211206_ace_swepam_1m.txt  20211207_ace_mag_1m.txt  20211207_ace_swepam_1m.txt  20211208_ace_mag_1m.txt  20211208_ace_swepam_1m.txt  20211209_ace_mag_1m.txt  20211209_ace_swepam_1m.txt  20211210_ace_mag_1m.txt  20211210_ace_swepam_1m.txt  20211211_ace_mag_1m.txt  20211211_ace_swepam_1m.txt  (+78 more)
figures/: test.ps
